@@ -34,7 +34,14 @@ public class RealmList<E extends RealmObject> extends AbstractList<E> {
 
     @Override
     public void add(int location, E object) {
+        view.insert(location, object.realmGetRow().getIndex());
+    }
+
+    @Override
+    public boolean add(E object) {
         view.add(object.realmGetRow().getIndex());
+        return true;
+
     }
 
     @Override
