@@ -4,6 +4,8 @@ Beta-0.3.0
   =======
 
   * Renaming beginWrite to beginTransaction and commit to commitTransaction
+  * Adding minDate and maxDate to RealmResults
+  * Adding add(object) to RealmList
 
   Bug Fixes
   =========
